# vkaEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  compile-commands.json  conanfile.py  conanfile.txt  install.sh  make-package.sh  make-profiles.sh  programFlow.txt  run-build.sh  run-test.sh  version.hpp.in  vkaEngine.cppcheck
include/: Asset.hpp  Buffer.hpp  Buffer.hpp-15fa6a91  Buffer.hpp-48ad0929  Buffer.hpp-6dbe3b53  Buffer.hpp-8c82c18a  Buffer.hpp-dc69a458  Buffer.hpp-dce0b0df  Camera.hpp  CircularQueue.hpp  Clock.hpp  CommandPool.hpp  Config.hpp  DescriptorPool.hpp  DescriptorSetLayout.hpp  Device.hpp  Engine.hpp  Fence.hpp  Framebuffer.hpp  IO.hpp  Image.hpp  Input.hpp  Instance.hpp  LevelData.hpp  Logger.hpp  Pipeline.hpp  PipelineLayout.hpp  QuadTree.hpp  QueueTraits.hpp  RenderGraph.hpp  RenderObject.hpp  RenderPass.hpp  Semaphore.hpp  ShaderModule.hpp  Surface.hpp  Swapchain.hpp  Text.hpp  VkEnumStrings.hpp  Window.hpp  braintree.hpp  (+4 more)
include/physics/: Particle.hpp
src/: BasicLoop.hpp  Buffer.cpp  Camera.cpp  Camera.hpp  CircularQueue.hpp  CircularQueue.test.cpp  Clock.hpp  CommandPool.cpp  CommandPool.hpp  Config.hpp.cfg  Config.hpp.in  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Device.test.cpp  Engine.cpp  Engine.hpp  Fence.cpp  Fence.hpp  FlatList.hpp  FlatList.test.cpp  Framebuffer.cpp  GLFW.cpp  GLFW.hpp  GLFW.test.cpp  Graphics.hpp  IO.hpp  Image.cpp  Image.hpp  Input.hpp  Instance.cpp  Instance.hpp  Instance.test.cpp  Logger.cpp  Logger.hpp  (+109 more)
tests/: Asset.cpp  Asset.hpp  CMakeLists.txt  test-debug.hpp  test-input.json  test-p3d-pipeline.hpp  test-text.hpp  test-transfer.hpp  testmain.cpp
tests/content/fonts/NiocTresni/: info.txt
tests/content/models/: cube.blend  cube.blend1  cube.gltf  cylinder.blend  cylinder.blend1  cylinder.gltf  icosphereSub2.blend  icosphereSub2.blend1  icosphereSub2.gltf  pentagon.blend  pentagon.blend1  pentagon.gltf  shapes.blend  shapes.gltf  terrain.gltf  triangle.blend  triangle.blend1  triangle.glb  triangle.gltf
tests/content/shaders/: imgui.vert  shader.frag  shader.vert  text.frag  text.vert  vert.spv
tests/shaders/: frag.spv  shader.frag  shader.vert
